ajout des différents deploiements etudiés

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,13 @@
 version: "3.3"
 
 services:
-  api:
-    image: n1c0l4stournier/springboot.helloworld.rest:0.0.1
-    deploy:
-      replicas: 2
-    ports:
-    - 8181:8181
+  mysql_db:
+    image: mysql:5.7
+    environment:
+      MYSQL_ROOT_PASSWORD: pass
+      MYSQL_DATABASE: db_rest
+    volumes:
+    - mysql-data:/var/lib/mysql
+
+volumes:
+  mysql-data:
